--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,35 @@
 cmake_minimum_required(VERSION 3.31)
+project(http_server VERSION 1.0 LANGUAGES CXX)
 
-set(TARGET "http_server")
-# set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-project(${TARGET}
-    VERSION 1.0
-    LANGUAGES CXX)
+set(LIBRARY "server_library")
+set(TEST_TARGET "server_tests_bin")
+set(TARGET "server_impl_bin")
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 find_package(GTest REQUIRED)
 
-add_executable(${TARGET}
-    src/main.cpp
+# server library
+add_library(${LIBRARY}
     src/HttpServer.cpp
     include/HttpServer.h
     include/AtomicQueue.h
     include/constants.h
-    test/get-listener-socket-unittest.cpp
 )
+target_include_directories(${LIBRARY} PUBLIC include)
+target_compile_features(${LIBRARY} PRIVATE cxx_std_17)
 
-target_link_libraries(${TARGET}
+# server implementation executable
+add_executable(${TARGET}
+    src/main.cpp
+)
+target_link_libraries(${TARGET} PRIVATE ${LIBRARY})
+
+# unit tests executable
+add_executable(${TEST_TARGET} test/get-listener-socket-unittest.cpp)
+target_link_libraries(${TEST_TARGET}
+    PRIVATE
+    ${LIBRARY}
     GTest::gtest_main
 )
-
 include(GoogleTest)
-gtest_discover_tests(${TARGET})
-
-target_compile_features(${TARGET} PRIVATE cxx_std_17)
-
-if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
-    target_compile_options(${TARGET} PRIVATE /W4)
-elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
-    target_compile_options(${TARGET} PRIVATE -g -Wall -Wextra -Wpedantic)
-elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
-    # other macOS-specific flags for Clang
-endif()
+gtest_discover_tests(${TEST_TARGET})
