--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,19 +17,24 @@ add_library(${LIBRARY}
 )
 target_include_directories(${LIBRARY} PUBLIC include)
 target_compile_features(${LIBRARY} PRIVATE cxx_std_17)
+if (ENABLE_TESTS)
+    target_compile_options(${LIBRARY} PRIVATE -O0 -g --coverage)
+endif()
 
 # unit tests executable
 if (ENABLE_TESTS)
+    enable_testing()
     find_package(GTest REQUIRED)
     add_executable(${TEST_TARGET} test/HttpServerTest.cpp)
     target_link_libraries(${TEST_TARGET}
-        PRIVATE
-        ${LIBRARY}
-        GTest::gtest_main
+        PRIVATE ${LIBRARY} GTest::gtest_main
     )
+
     include(GoogleTest)
     gtest_discover_tests(${TEST_TARGET})
-    target_compile_options(${TEST_TARGET} PRIVATE -g)
+    target_compile_options(${TEST_TARGET} PRIVATE -g -O0 -g --coverage)
+    target_link_options(${TEST_TARGET} PRIVATE -O0 -g --coverage)
+
     return()
 endif()
 
@@ -38,4 +43,3 @@ add_executable(${TARGET}
     src/main.cpp
 )
 target_link_libraries(${TARGET} PRIVATE ${LIBRARY})
-
