Add write-all permissions to workflows

--- a/.github/workflows/server_workflows.yml
+++ b/.github/workflows/server_workflows.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-22.04
+    permissions: write-all
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
