--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.15)
-project(http_server VERSION 1.0 LANGUAGES CXX)
+project(http_server VERSION 1.0 LANGUAGES C CXX)
 
 set(LIBRARY "server_library")
 set(TEST_TARGET "server_tests_bin")
@@ -13,11 +13,14 @@ find_package(Threads REQUIRED)
 # server library
 add_library(${LIBRARY}
         src/HttpServer.cpp
+        src/HttpParser.cpp
+        src/PathParams.cpp
         include/HttpServer.h
         include/AtomicQueue.h
         include/constants.h
-        src/HttpParser.cpp
         include/HttpParser.h
+        include/PathParams.h
+        include/Route.h
 )
 target_include_directories(${LIBRARY} PUBLIC include)
 target_compile_features(${LIBRARY} PRIVATE cxx_std_17)
