Update server workflows to use Debug build for coverage analysis

--- a/.github/workflows/server_workflows.yml
+++ b/.github/workflows/server_workflows.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Coverage
         shell: bash
         run: |
-          cd build/Release
+          cd build/Debug
           make coverage
 
       - name: Report Code Coverage
